--- a/css/signup.css
+++ b/css/signup.css
@@ -78,12 +78,12 @@
 }
 
 .signup-img{
-  width: 50%;
-  height: 100%;
-  overflow: hidden;
+  width: 100%;
   border-radius: 25px;
-  /* background-image: url("../Images/Sign up.gif") ; */
-
+  background-image: url("../Images/Signup.gif") ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .signup-img img{
