--- a/css/Exam.css
+++ b/css/Exam.css
@@ -22,6 +22,7 @@
   color: white;
   border-bottom: 1px solid white;
 }
+
 .head {
   background-color: rgb(46, 170, 170);
   border-radius: 8px;
@@ -117,4 +118,8 @@
   background-color: white;
   color: rgb(169, 67, 187);
   transform: scale(1.1);
+}
+
+.activeFlag {
+  color: red !important;
 }
