--- a/css/Timeout.css
+++ b/css/Timeout.css
@@ -1,24 +1,24 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-color: rgb(206, 171, 212);
-    /* height: 100%; */
+  background-color: rgb(206, 171, 212);
+  /* height: 100%; */
 }
 
-.container{
-    background-color: white;
-    width: 70%;
-    margin: 0 auto;
+.container {
+  background-color: white;
+  width: 70%;
+  margin: 0 auto;
 }
 
-.title , #user{
-    color:  rgb(170, 100, 182) ;
+.title,
+#user {
+  color: rgb(170, 100, 182);
 }
 
-img{
-    width: 35%;
+img {
+  width: 35%;
 }
-
