--- a/css/Fail.css
+++ b/css/Fail.css
@@ -19,22 +19,27 @@ body {
 }
 
 .title,
+h4,
 #user {
   color: rgb(170, 100, 182);
   margin-bottom: 10px;
-}
-
-#user > span{
-  color:rgb(100, 51, 108);
 }
 
 img {
   width: 70%;
 }
 
+#user-name > span {
+  color: rgb(100, 51, 108);
+}
+
+#user .fail {
+  color: red;
+}
+
 .try-again button {
   display: flex;
-  margin: 10px auto;
+  margin: 5px auto;
   padding: 10px 30px;
   background-color: transparent;
   border: 2px solid rgb(169, 67, 187);
@@ -52,7 +57,8 @@ img {
 }
 
 @media only screen and (max-width: 500px) {
-  .title{
+  .title,
+  h4 {
     font-size: 20px;
     margin: 15px;
   }
