--- a/css/ServerDown.css
+++ b/css/ServerDown.css
@@ -11,41 +11,40 @@ body {
   justify-content: center;
 }
 
-.box{
+.box {
   background-color: white;
   width: 100%;
   height: 90%;
   margin: auto;
 }
 
-/* .container {
-  background-color: white;
-  width: 70%;
-  margin: 0 auto;
-} */
-
 .title,
+h4,
 #user {
   color: rgb(170, 100, 182);
   margin-bottom: 10px;
-}
-
-#user > span{
-  color:rgb(100, 51, 108);
 }
 
 img {
   width: 70%;
 }
 
+#user-name > span {
+  color: rgb(100, 51, 108);
+}
+
+#user .fail {
+  color: red;
+}
+
 .try-again button {
   display: flex;
-  margin: 10px auto;
+  margin: 5px auto;
   padding: 10px 30px;
   background-color: transparent;
   border: 2px solid rgb(169, 67, 187);
   border-radius: 10px;
-  color:  rgb(169, 67, 187);
+  color: rgb(169, 67, 187);
   cursor: pointer;
   font-size: 17px;
   outline: none;
@@ -58,7 +57,8 @@ img {
 }
 
 @media only screen and (max-width: 500px) {
-  .title{
+  .title,
+  h4 {
     font-size: 20px;
     margin: 15px;
   }
@@ -71,5 +71,3 @@ img {
     width: 100%;
   }
 }
-
-
