--- a/css/signup.css
+++ b/css/signup.css
@@ -1,11 +1,12 @@
 * {
   padding: 0;
   margin: 0;
-  background-color: rgb(206, 171, 212);
+  background-color: rgb(247, 229, 251);
 }
 
 .signup {
   height: 100vh;
+  background-color: rgb(247, 229, 251);
 }
 
 .title {
@@ -22,7 +23,7 @@
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
     rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-  color: white;
+  color:rgb(169, 67, 187);
 }
 
 .signup input {
@@ -37,28 +38,21 @@
 }
 
 .signup button {
-  /* padding: 8px;
-  width: 300px;
-  min-width: 200px;
-  max-width: 300px;
-  outline: none;
-  border: 1px solid gray;
-  border-radius: 8px; */
   display: flex;
   margin: 10px auto;
   padding: 10px 30px;
   background-color: transparent;
-  border: 2px solid white;
+  border: 2px solid rgb(169, 67, 187);
   border-radius: 10px;
-  color: white;
+  color: rgb(169, 67, 187);
   cursor: pointer;
   font-size: 17px;
   outline: none;
 }
 
 .signup button:hover {
-  background-color: white;
-  color: rgb(169, 67, 187);
+  background-color: rgb(169, 67, 187);
+  color: white;
   transform: scale(1.1);
 }
 
